--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
 margin:0;
 padding: 0;
-background-color: #d0f9d0;
+background-color: #37AA00;
 }
 
 .logoimg{
@@ -57,5 +57,6 @@ text-align: center;
 
 .red_cube{
 height:15%;
+
 
 }
